--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
         <img class="images" src="images/wc-mini.png" alt="">
          
     </section>
+
+    <section class="cannect">
+        <h2 class="main-head">Joined Thousands of Productive Users</h2>
+        <div class="star-container">
+        <div>
+            <h3 class="all-three">50K</h3>
+            <p class="three-para">Active Users</p>
+        </div>
+
+        <div>
+            <h3 class="all-three">2M+</h3>
+            <p class="three-para">Focus Sessions</p>
+        </div>
+
+        <div>
+            <h3 class="all-three">
+                95%
+            </h3>
+            
+            <p class="three-para">Satisfaction Rate</p>
+        </div>
+
+        </div>
+    </section>
     </main>
     <footer>
 
