--- a/index.html
+++ b/index.html
@@ -82,18 +82,19 @@
         
         </div>
         </section>
-        <section>
-            <h3>
+        <section class=last>
+            <div class="last-container">
+            <h3 class="nav-titel nav-title-primary-color">
              FARHAN
             </h3>
-            <P>
+            <P class="pera">
                 Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
             </P>
-            <div>
-                <ul>
+            
+                <ul class="navi nav-pt">
                     <li>Home</li>
                     <li>About</li>
-                    <li>How it Works</li>
+                    <li>How it Works </li>
                     <li>Services</li>
                 </ul>
             </div>
